--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 GLOBALS CLASSES 
 -------------------------------------------------*/
 *{padding:0; margin:0;}
-body{	background: #DCDDDF url(https://cssdeck.com/uploads/media/items/7/7AF2Qzt.png);
+body{	background: white;
 	color: #000;
 	font: 14px Arial;
 	margin: 0 auto;
