--- a/css/styles.css
+++ b/css/styles.css
@@ -149,3 +149,9 @@ CONTACT FORM CLASSS
 /*-------------------------------------------------
 FOOTER CLASSES
 -------------------------------------------------*/
+.footer {
+	background-color: black;
+	color: white;
+	padding: 10px;
+	text-align: center;
+  }
