Fix contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,8 +146,8 @@ CONTACT FORM CLASSS
 .contact-form {padding:30px; width:100%; float:left;}
 .contact-form label {display: block; padding:10px 0 10px 0;}
 .contact-form label span {display: block; color:black;font-size:16px; float:left; width:80px; text-align:left; padding:5px 20px 0 0;}
-.contact-form .input_text {padding:10px 10px; width:440px; background:#1e3246;border: none; color:#fff; background:url(../images/bg2.jpg) repeat-x; outline:none; font-family:"Trebuchet MS"; font-size:14px;}
-.contact-form .message{padding:10px 10px; width:440px; color:#fff;border: none;overflow:hidden;height:150px;background:url(../images/bg2.jpg); outline:none; font-family:"Trebuchet MS"; font-size:14px;}
+.contact-form .input_text {padding:10px 10px; width:440px;border:2px solid black;  outline:black; font-family:"Trebuchet MS"; font-size:14px;}
+.contact-form .message{padding:10px 10px; width:440px; color: #000;border:2px solid ;overflow:hidden;height:150px; outline:none; font-family:"Trebuchet MS"; font-size:14px;}
 .contact-form .button{padding:8px;background:green; color:#1e3246; text-transform:uppercase; font-family:"Trebuchet MS"; border:0px solid;margin-left:100px;margin-top:20px;}
 
 .address { float:left; width:370px; margin-left:30px;}
